# omnichannel-chatcepat

./: .env.example  .env.production.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.smoke.yml  docker-compose.yml
engine/: CLAUDE.md  Dockerfile  alembic.ini  pyproject.toml
engine/app/: bus.py  config.py  db.py  main.py  rbac.py  seed.py
engine/app/ai/: __init__.py  agent.py  ingest.py  llm.py  rag.py
engine/app/api/: __init__.py  internal.py
engine/app/consumers/: __init__.py  broadcast_worker.py  inbound_consumer.py  status_consumer.py
engine/app/contracts/: __init__.py  events.py
engine/app/models/: __init__.py  audit.py  base.py  broadcast.py  channel.py  contact.py  conversation.py  conversation_state.py  flow.py  knowledge.py  message.py  order.py  plan.py  product.py  tag.py  template.py  tenant.py  user.py
engine/app/pipeline/: __init__.py  decision.py  flow_engine.py  reply.py
engine/app/repositories/: __init__.py  broadcasts.py  channels.py  contacts.py  conversations.py  flows.py  messages.py  products.py  states.py
engine/app/services/: __init__.py  audit.py  broadcast.py  conversation.py  inbound.py  status.py  warmup.py
engine/chatcepat_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
engine/migrations/: env.py
engine/migrations/versions/: 0001_initial.py  0002_templates.py  0003_billing.py  0004_user_avatar.py  0005_msg_outbound_window.py  0006_roles_2.py  (+5 more)
engine/scripts/: itest_06.py  itest_07.py  itest_pipeline.py  itest_rag_openai.py
engine/tests/: test_ai_agent.py  test_rbac.py
(+268 files in other folders)
